src/OcctNative/OcctNative.h

    struct OcctPoint3d { double x; double y; double z; };
    struct OcctVector3d { double x; double y; double z; };
    struct OcctBounds { double minX; double minY; double minZ; double maxX; double maxY; double maxZ; };
    struct OcctMassProperties { double mass; double centerX; double centerY; double centerZ; };
    struct OcctDistanceResult { double distance; OcctPoint3d pointOnFirst; OcctPoint3d pointOnSecond; };
    // Registry, AIS attributes and lifecycle.
    OCCTBRIDGE_API int occt_object_count(OcctHandle handle);
    OCCTBRIDGE_API OcctObjectId occt_object_id_at(OcctHandle handle, int index);
    OCCTBRIDGE_API OcctObjectId occt_shape_id_at(OcctHandle handle, int index);
    OCCTBRIDGE_API int occt_object_exists(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_object_kind(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_set_object_name(OcctHandle handle, OcctObjectId objectId, const char* utf8Name);
    OCCTBRIDGE_API const char* occt_get_object_name(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_set_object_color(OcctHandle handle, OcctObjectId objectId, double r, double g, double b);
    OCCTBRIDGE_API int occt_set_object_transparency(OcctHandle handle, OcctObjectId objectId, double transparency);
    OCCTBRIDGE_API int occt_set_object_visible(OcctHandle handle, OcctObjectId objectId, int visible);
    OCCTBRIDGE_API int occt_set_object_display_mode(OcctHandle handle, OcctObjectId objectId, int displayMode);
    OCCTBRIDGE_API int occt_set_object_line_width(OcctHandle handle, OcctObjectId objectId, double width);
    OCCTBRIDGE_API int occt_set_object_material(OcctHandle handle, OcctObjectId objectId, int material);
    OCCTBRIDGE_API int occt_delete_object(OcctHandle handle, OcctObjectId objectId);
    OCCTBRIDGE_API int occt_delete_objects(OcctHandle handle, const OcctObjectId* objectIds, int count);
    OCCTBRIDGE_API int occt_clear(OcctHandle handle);
    // Shape query and analysis.
    OCCTBRIDGE_API int occt_shape_type(OcctHandle handle, OcctObjectId shapeId);
    OCCTBRIDGE_API int occt_shape_is_valid(OcctHandle handle, OcctObjectId shapeId);
    OCCTBRIDGE_API int occt_shape_bounds(OcctHandle handle, OcctObjectId shapeId, OcctBounds* result);
    OCCTBRIDGE_API int occt_shape_linear_properties(OcctHandle handle, OcctObjectId shapeId, OcctMassProperties* result);
    OCCTBRIDGE_API int occt_shape_surface_properties(OcctHandle handle, OcctObjectId shapeId, OcctMassProperties* result);
    OCCTBRIDGE_API int occt_shape_volume_properties(OcctHandle handle, OcctObjectId shapeId, OcctMassProperties* result);
    OCCTBRIDGE_API int occt_shape_distance(OcctHandle handle, OcctObjectId firstId, OcctObjectId secondId, OcctDistanceResult* result);
    OCCTBRIDGE_API int occt_topology_count(OcctHandle handle, OcctObjectId shapeId, int shapeType);
    OCCTBRIDGE_API OcctObjectId occt_get_subshape(OcctHandle handle, OcctObjectId shapeId, int shapeType, int index);
    OCCTBRIDGE_API OcctObjectId occt_copy_shape(OcctHandle handle, OcctObjectId shapeId, int hideInput);
    // Shape transformations.
    OCCTBRIDGE_API OcctObjectId occt_translate(OcctHandle handle, OcctObjectId shapeId, OcctVector3d vector, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_rotate(OcctHandle handle, OcctObjectId shapeId, OcctPoint3d axisPoint, OcctVector3d axisDirection, double angleDegrees, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_scale(OcctHandle handle, OcctObjectId shapeId, OcctPoint3d center, double factor, int hideInput);
    OCCTBRIDGE_API OcctObjectId occt_mirror_plane(OcctHandle handle, OcctObjectId shapeId, OcctPoint3d planePoint, OcctVector3d planeNormal, int hideInput);
    // Basic points, 2D/3D curves and planar elements.
    OCCTBRIDGE_API OcctObjectId occt_make_vertex(OcctHandle handle, OcctPoint3d point);
    OCCTBRIDGE_API OcctObjectId occt_make_line(OcctHandle handle, OcctPoint3d start, OcctPoint3d end);
    OCCTBRIDGE_API OcctObjectId occt_make_polyline(OcctHandle handle, const OcctPoint3d* points, int count, int closed);
    OCCTBRIDGE_API OcctObjectId occt_make_circle(OcctHandle handle, OcctPoint3d center, OcctVector3d normal, double radius);
    OCCTBRIDGE_API OcctObjectId occt_make_arc_three_points(OcctHandle handle, OcctPoint3d start, OcctPoint3d middle, OcctPoint3d end);
    OCCTBRIDGE_API OcctObjectId occt_make_ellipse(OcctHandle handle, OcctPoint3d center, OcctVector3d normal, double majorRadius, double minorRadius);
    OCCTBRIDGE_API OcctObjectId occt_make_bezier(OcctHandle handle, const OcctPoint3d* poles, int count);
    OCCTBRIDGE_API OcctObjectId occt_make_bspline_interpolated(OcctHandle handle, const OcctPoint3d* points, int count, int periodic, double tolerance);
    OCCTBRIDGE_API OcctObjectId occt_make_rectangle_wire(OcctHandle handle, OcctPoint3d origin, OcctVector3d xDirection, OcctVector3d normal, double width, double height);
    OCCTBRIDGE_API OcctObjectId occt_make_face_from_wire(OcctHandle handle, OcctObjectId wireId, int onlyPlane);
    OCCTBRIDGE_API OcctObjectId occt_make_plane_face(OcctHandle handle, OcctPoint3d origin, OcctVector3d xDirection, OcctVector3d normal, double width, double height);
    // Primitive solids.
    OCCTBRIDGE_API OcctObjectId occt_make_box(OcctHandle handle, double x, double y, double z, double dx, double dy, double dz);
    OCCTBRIDGE_API OcctObjectId occt_make_cylinder(OcctHandle handle, OcctPoint3d origin, OcctVector3d axis, double radius, double height);
    OCCTBRIDGE_API OcctObjectId occt_make_sphere(OcctHandle handle, OcctPoint3d center, double radius);
    OCCTBRIDGE_API OcctObjectId occt_make_cone(OcctHandle handle, OcctPoint3d origin, OcctVector3d axis, double radius1, double radius2, double height);
    OCCTBRIDGE_API OcctObjectId occt_make_torus(OcctHandle handle, OcctPoint3d center, OcctVector3d axis, double majorRadius, double minorRadius);
    OCCTBRIDGE_API OcctObjectId occt_make_wedge(OcctHandle handle, double dx, double dy, double dz, double ltx);
    // Topology assembly.
    OCCTBRIDGE_API OcctObjectId occt_make_compound(OcctHandle handle, const OcctObjectId* shapeIds, int count, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_make_wire(OcctHandle handle, const OcctObjectId* edgeIds, int count, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_sew_shapes(OcctHandle handle, const OcctObjectId* shapeIds, int count, double tolerance, int hideInputs);
    OCCTBRIDGE_API OcctObjectId occt_make_solid_from_shell(OcctHandle handle, OcctObjectId shellId, int hideInput);